--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -9,7 +9,7 @@
     <license type="expression">MIT</license>
     <readme>docs\README.md</readme>
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
-    <!-- <iconUrl>http://github.com/contoso/UsefulStuff/nuget_icon.png</iconUrl> -->
+    <icon>icon.png</icon>
     <releaseNotes>
     Nuget package documentation and icon updated.
     </releaseNotes>
@@ -31,5 +31,6 @@
     <file src="..\Cross.CQRS\bin\Release\net6.0\Cross.CQRS*.* " target="lib\net6.0" />
     <file src="..\Cross.CQRS\bin\Release\net7.0\Cross.CQRS*.* " target="lib\net7.0" />
     <file src="..\README.md" target="docs\" />
+    <file src="..\icon.png" target="" />
   </files>
 </package>
