--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Cross.CQRS</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,7 +11,8 @@
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
     <icon>icon.png</icon>
     <releaseNotes>
-    Nuget package documentation and icon updated.
+    Documentation updated.
+    Icon updated.
     </releaseNotes>
     <description>Simple .NET MediatR base Query, Command, Event. Event Queue and Validation behaviors. Written on C#.</description>
     <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
