--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -2,22 +2,20 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Cross.CQRS</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <readme>docs\README.md</readme>
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
-    <!-- <iconUrl>http://github.com/contoso/UsefulStuff/nuget_icon.png</iconUrl> -->
+    <icon>icon.png</icon>
     <releaseNotes>
-    Initial version.
-	Added Sourcelink.
-	Package updates.
-	Only netstandard2.1, net6.0, net7.0 is now supported.
+    Documentation updated.
+    Icon updated.
     </releaseNotes>
     <description>Simple .NET MediatR base Query, Command, Event. Event Queue and Validation behaviors. Written on C#.</description>
-    <tags>.NET Mediatr Query Command Event EventQueueBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
+    <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
     <repository type="git" url="https://github.com/denis-peshkov/Cross.CQRS" />
     <dependencies>
         <dependency id="FluentValidation" version="11.8.0" />
@@ -34,5 +32,6 @@
     <file src="..\Cross.CQRS\bin\Release\net6.0\Cross.CQRS*.* " target="lib\net6.0" />
     <file src="..\Cross.CQRS\bin\Release\net7.0\Cross.CQRS*.* " target="lib\net7.0" />
     <file src="..\README.md" target="docs\" />
+    <file src="..\icon.png" target="" />
   </files>
 </package>
