--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Cross.CQRS</id>
-    <version>7.0.0</version>
+    <version>8.0.0</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,8 +11,7 @@
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
     <icon>icon.png</icon>
     <releaseNotes>
-      Removed PaginatedQuery as useless.
-      Updated version to correlate with .NET version.
+      Added support for .NET 8.
     </releaseNotes>
     <description>Simple .NET MediatR base Query, Command, Event. Event Queue and Validation behaviors. Written on C#.</description>
     <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
@@ -22,7 +21,7 @@
       <dependency id="FluentValidation.DependencyInjectionExtensions" version="11.8.0" />
       <dependency id="MediatR" version="11.1.0" />
       <dependency id="MediatR.Extensions.Microsoft.DependencyInjection" version="11.1.0" />
-      <dependency id="Microsoft.Extensions.Configuration" version="7.0.0" />
+      <dependency id="Microsoft.Extensions.Configuration" version="8.0.0" />
       <dependency id="Microsoft.CSharp" version="4.7.0" />
       <dependency id="Scrutor" version="4.2.2" />
     </dependencies>
@@ -31,6 +30,7 @@
     <file src="..\Cross.CQRS\bin\Release\netstandard2.1\Cross.CQRS*.* " target="lib\netstandard2.1" />
     <file src="..\Cross.CQRS\bin\Release\net6.0\Cross.CQRS*.* " target="lib\net6.0" />
     <file src="..\Cross.CQRS\bin\Release\net7.0\Cross.CQRS*.* " target="lib\net7.0" />
+    <file src="..\Cross.CQRS\bin\Release\net7.0\Cross.CQRS*.* " target="lib\net8.0" />
     <file src="..\README.md" target="docs\" />
     <file src="..\icon.png" target="" />
   </files>
