--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -2,21 +2,22 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Cross.CQRS</id>
-    <version>8.0.1</version>
+    <version>8.1.2</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
-    <readme>docs\README.md</readme>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
+    <repository type="git" url="https://github.com/denis-peshkov/Cross.CQRS" />
+    <readme>docs\README.md</readme>
     <icon>icon.png</icon>
     <releaseNotes>
-      Fixed unhandled exception on .NET 8. System.TypeLoadException: GenericArguments[0], 'TCommnd', on 'MediatR.IRequestHandler`2[TRequest,TResponse]' violates the constraint of type parameter 'TRequest'.
-      Upgrade packages.
+      Added NoRegisterAutomaticallyAttribute to avoid register instance of class automatically in DI.
+      Small fixes.
+      Added sample project.
     </releaseNotes>
     <description>Simple .NET MediatR base Query, Command, Event. Event Queue and Validation behaviors. Written on C#.</description>
     <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
-    <repository type="git" url="https://github.com/denis-peshkov/Cross.CQRS" />
     <dependencies>
       <dependency id="FluentValidation" version="11.8.1" />
       <dependency id="FluentValidation.DependencyInjectionExtensions" version="11.8.1" />
@@ -24,14 +25,13 @@
       <dependency id="MediatR.Extensions.Microsoft.DependencyInjection" version="11.1.0" />
       <dependency id="Microsoft.Extensions.Configuration" version="8.0.0" />
       <dependency id="Microsoft.CSharp" version="4.7.0" />
-      <dependency id="Scrutor" version="4.2.2" />
     </dependencies>
   </metadata>
   <files>
     <file src="..\Cross.CQRS\bin\Release\netstandard2.1\Cross.CQRS*.* " target="lib\netstandard2.1" />
     <file src="..\Cross.CQRS\bin\Release\net6.0\Cross.CQRS*.* " target="lib\net6.0" />
     <file src="..\Cross.CQRS\bin\Release\net7.0\Cross.CQRS*.* " target="lib\net7.0" />
-    <file src="..\Cross.CQRS\bin\Release\net7.0\Cross.CQRS*.* " target="lib\net8.0" />
+    <file src="..\Cross.CQRS\bin\Release\net8.0\Cross.CQRS*.* " target="lib\net8.0" />
     <file src="..\README.md" target="docs\" />
     <file src="..\icon.png" target="" />
   </files>
