--- a/Cross.CQRS/Cross.CQRS.csproj
+++ b/Cross.CQRS/Cross.CQRS.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+
+    <PackageReference Include="Scrutor" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
