--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Cross.CQRS</id>
-    <version>8.2.0-preview.5</version>
+    <version>8.2.0</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
     <license type="expression">MIT</license>
@@ -15,8 +15,8 @@
       Added IRequestFilter with Behaviour to filter request of query or command.
       Added IResultFilter with Behaviour to filter result of query or command.
     </releaseNotes>
-    <description>Simple .NET MediatR base Query, Command, Event. Event Queue and Validation behaviors. Written on C#.</description>
-    <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
+    <description>Simple .NET MediatR base Query, Command, Event. Filter behaviours. Event Queue and Validation behaviors. Written on C#.</description>
+    <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Filter FilterBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
     <dependencies>
       <dependency id="FluentValidation" version="11.8.1" />
       <dependency id="FluentValidation.DependencyInjectionExtensions" version="11.8.1" />
