--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -5,6 +5,7 @@
     <version>8.2.0</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
+    <copyright>Copyright 2024</copyright>
     <license type="expression">MIT</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
@@ -15,8 +16,8 @@
       Added IRequestFilter with Behaviour to filter request of query or command.
       Added IResultFilter with Behaviour to filter result of query or command.
     </releaseNotes>
-    <description>Simple .NET MediatR base Query, Command, Event. Filter behaviours. Event Queue and Validation behaviors. Written on C#.</description>
-    <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Filter FilterBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
+    <description>Simple .NET MediatR base Query, Command, Event. RequestFilter, ResultFilter and Filter behaviours. Event Queue and Validation behaviors. Written on C#.</description>
+    <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Filter RequestFilter ResultFilter FilterBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
     <dependencies>
       <dependency id="FluentValidation" version="11.8.1" />
       <dependency id="FluentValidation.DependencyInjectionExtensions" version="11.8.1" />
