--- a/Cross.CQRS/Cross.CQRS.csproj
+++ b/Cross.CQRS/Cross.CQRS.csproj
@@ -5,7 +5,7 @@
     <LangVersion>11</LangVersion>
     <EnablePreviewFeatures>true</EnablePreviewFeatures>
     <GenerateRequiresPreviewFeaturesAttribute>False</GenerateRequiresPreviewFeaturesAttribute>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>false</ImplicitUsings>
     <Nullable>disable</Nullable>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -14,6 +14,7 @@
 
   <Target Name="DeleteBinObjFolders" BeforeTargets="Clean">
     <RemoveDir Directories=".\bin" />
+    <Delete Files=".\obj\**\*.cs" />
   </Target>
 
   <ItemGroup>
