--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'Cross.CQRS.sln'
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # ubuntu-latest
 
     steps:
       - name: Checkout
@@ -34,6 +34,12 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+
+#      - name: Install Mono
+#        run: |
+#          apt-get install -y mono-runtime
+#          apt-get install -y mono-complete
+#          apt-get install -y nuget
 
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v2.0.0
