--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -13,11 +13,11 @@
     <readme>docs\README.md</readme>
     <icon>icon.png</icon>
     <releaseNotes>
-      Added IRequestFilter with Behaviour to filter request of query or command.
-      Added IResultFilter with Behaviour to filter result of query or command.
+      Added CommandEventTypeEnum to define a type of Event, which should process event inside or outside of a transaction.
+      Renamed EventQueueProcessBehavior into CommandEventQueueProcessBehavior, EventHandler into CommandEventHandler, EventQueue into CommandEventQueue, IEvent into ICommandEvent, IEventQueue into ICommandEventQueue, IEventQueueReader into ICommandEventQueueReader and IEventQueueWriter into ICommandEventQueueWriter.
     </releaseNotes>
-    <description>Simple .NET MediatR base Query, Command, Event. RequestFilter, ResultFilter and Filter behaviours. Event Queue and Validation behaviors. Written on C#.</description>
-    <tags>.NET Mediatr Query QueryHandler Command CommandHandler Event EventHandler EventQueueBehavior Filter RequestFilter ResultFilter FilterBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
+    <description>Simple .NET MediatR base Query, Command, CommandEvent and CommandEventQueueProcess behavior. RequestFilter, ResultFilter and Filter behaviours. Event Queue and Validation behaviors. Written on C#.</description>
+    <tags>.NET MediatR Query QueryHandler Command CommandHandler CommandEvent CommandEventHandler CommandEventQueueProcessBehavior Filter RequestFilter ResultFilter FilterBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
     <dependencies>
       <dependency id="FluentValidation" version="11.8.1" />
       <dependency id="FluentValidation.DependencyInjectionExtensions" version="11.8.1" />
