--- a/Cross.CQRS/Cross.CQRS.csproj
+++ b/Cross.CQRS/Cross.CQRS.csproj
@@ -24,8 +24,8 @@
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
 
     <PackageReference Include="Scrutor" Version="4.2.2" />
   </ItemGroup>
