--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Cross.CQRS</id>
-    <version>8.2.0</version>
+    <version>0.0.0</version>
     <authors>denis-peshkov</authors>
     <owners>denis-peshkov</owners>
     <copyright>Copyright 2024</copyright>
@@ -26,6 +26,7 @@
       <dependency id="Microsoft.Extensions.Configuration" version="8.0.0" />
       <dependency id="Microsoft.CSharp" version="4.7.0" />
       <dependency id="Scrutor" version="4.2.2" />
+      <dependency id="Microsoft.Extensions.Logging" version="8.0.1" />
     </dependencies>
   </metadata>
   <files>
