--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -27,6 +27,7 @@
       <dependency id="Microsoft.CSharp" version="4.7.0" />
       <dependency id="Scrutor" version="4.2.2" />
       <dependency id="Microsoft.Extensions.Logging" version="8.0.1" />
+      <dependency id="JetBrains.Annotations" version="2024.3.0" />
     </dependencies>
   </metadata>
   <files>
