--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
+#      # required for run-on ubuntu-latest
 #      - name: Install Mono
 #        run: |
 #          apt-get install -y mono-runtime
