--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,7 @@ on:
   pull_request:
     branches:
       - master
+  workflow_dispatch:   # <-- вот это даёт ручной запуск
 
 jobs:
   build:
@@ -58,8 +59,24 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
+#      - name: Build
+#        run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+
       - name: Build
-        run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+        run: |
+          dotnet build "$SOLUTION" --configuration "$BUILD_CONFIG" --no-restore \
+            -p:Configuration=$BUILD_CONFIG \
+            -p:Version=${{ env.semVer }} \
+            -p:AssemblyVersion=${{ env.semVer }}.0 \
+            -p:FileVersion=${{ env.semVer }}.0 \
+            -p:InformationalVersion="${{ env.semVer }}+${{ env.gitSha }}" \
+            -p:Company="Jimmy Bogard" \
+            -p:Product="MyProject" \
+            -p:Description="Contracts package for requests, responses, and notifications" \
+            -p:RepositoryUrl="https://github.com/jbogard/MediatR.git" \
+            -p:RepositoryType=git \
+            -p:CLSCompliant=true \
+            -p:NeutralLanguage=en
 
       - name: Run tests
         run: dotnet test /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal
