--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -66,14 +66,14 @@ jobs:
         run: |
           dotnet build "$SOLUTION" --configuration "$BUILD_CONFIG" --no-restore \
             -p:Configuration=$BUILD_CONFIG \
-            -p:Version=${{ env.semVer }} \
-            -p:AssemblyVersion=${{ env.semVer }}.0 \
-            -p:FileVersion=${{ env.semVer }}.0 \
-            -p:InformationalVersion="${{ env.semVer }}+${{ env.gitSha }}" \
-            -p:Company="Jimmy Bogard" \
-            -p:Product="MyProject" \
-            -p:Description="Contracts package for requests, responses, and notifications" \
-            -p:RepositoryUrl="https://github.com/jbogard/MediatR.git" \
+            -p:Version=${GitVersion_SemVer} \
+            -p:AssemblyVersion=${GitVersion_AssemblySemVer} \
+            -p:FileVersion=${GitVersion_AssemblySemFileVer} \
+            -p:InformationalVersion="${GitVersion_InformationalVersion}" \
+            -p:Company="Denis Peshkov" \
+            -p:Product="Cross.CQRS" \
+            -p:Description="Simple .NET MediatR base Query, Command, Event. Event Queue and Validation behaviors. Published on Nuget at https://www.nuget.org/packages/Cross.CQRS" \
+            -p:RepositoryUrl="https://github.com/denis-peshkov/Cross.CQRS.git" \
             -p:RepositoryType=git \
             -p:CLSCompliant=true \
             -p:NeutralLanguage=en
