--- a/_nuget/config.nuspec
+++ b/_nuget/config.nuspec
@@ -3,26 +3,43 @@
   <metadata>
     <id>Cross.CQRS</id>
     <version>0.0.0</version>
-    <authors>denis-peshkov</authors>
-    <owners>denis-peshkov</owners>
-    <copyright>Copyright 2024</copyright>
+    <authors>Denis Peshkov</authors>
+    <owners>Denis Peshkov</owners>
+    <copyright>Copyright 2025</copyright>
     <license type="expression">MIT</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/denis-peshkov/Cross.CQRS</projectUrl>
-    <repository type="git" url="https://github.com/denis-peshkov/Cross.CQRS" />
+    <repository type="git" url="https://github.com/denis-peshkov/Cross.CQRS.git" />
     <readme>docs\README.md</readme>
     <icon>icon.png</icon>
-    <releaseNotes>
-      Fix issue with logging of Command, EventCommand and Query objects.
-      Optimize work with Stopwatch.
-      Improve internal logging.
-    </releaseNotes>
+    <releaseNotes><![CDATA[
+      1) Logging Improvements
+      - Changed "for a {Elapsed} ms" to "in {Elapsed} ms"
+      - Optimized Stopwatch usage
+      - Improved internal logging
+
+      2) Dependency Updates
+      - FluentValidation 11.11.0
+      - MediatR 12.5.0
+
+      3) Architectural Changes
+      - Removed AsyncRequestHandlerBase
+      - CommandHandler<TCommand> now implements IRequestHandler<TCommand>
+      - ValidationBehavior now uses IRequestPreProcessor
+      - Added TaskWhenAllPublisher for MediatR
+
+      4) Code Optimizations
+      - Simplified methods
+      - Improved formatting
+      - Refactoring for cleaner architecture
+]]></releaseNotes>
     <description>Simple .NET MediatR base Query, Command, CommandEvent and CommandEventQueueProcess behavior. RequestFilter, ResultFilter and Filter behaviours. Event Queue and Validation behaviors. Written on C#.</description>
     <tags>.NET MediatR Query QueryHandler Command CommandHandler CommandEvent CommandEventHandler CommandEventQueueProcessBehavior Filter RequestFilter ResultFilter FilterBehavior Validation ValidationBehavior SyntaxNotes NetCore</tags>
     <dependencies>
       <dependency id="FluentValidation" version="11.11.0" />
       <dependency id="FluentValidation.DependencyInjectionExtensions" version="11.11.0" />
-      <dependency id="MediatR" version="12.5.0" />
+      <dependency id="MediatR" version="11.1.0" />
+      <dependency id="MediatR.Extensions.Microsoft.DependencyInjection" version="11.1.0" />
       <dependency id="Microsoft.Extensions.Configuration" version="8.0.0" />
       <dependency id="Microsoft.CSharp" version="4.7.0" />
       <dependency id="Scrutor" version="4.2.2" />
